# image-vector-search-and-storage

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
nginx/: Dockerfile  entrypoint.sh  nginx.conf
src/config/: settings.py  urls.py  wsgi.py
src/embeddings/: __init__.py  apps.py  embed_model.py  qdrant_service.py
src/frontend/: urls.py
src/images/: apps.py  models.py  tests.py
src/images/api/: permissions.py  serializers.py
src/images/api/v1/: urls.py  views.py
src/images/migrations/: 0001_initial.py  0002_imagemetadata_vectorized.py  0003_alter_imagemetadata_id.py
src/static/frontend/css/: style.css
src/static/frontend/js/: app.js
src/storage/: boto3.py  custom_s3.py
src/templates/frontend/: index.html
