[project]
name = "test-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.29",
    "celery>=5.6.3",
    "django>=6.0.6",
    "django-rest-framework>=0.1.0",
    "django-storages>=1.14.6",
    "django-cors-headers>=4.6.0",
    "drf-spectacular>=0.28.0",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
    "gunicorn>=26.0.0",
    "torch",
    "torchvision",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
